--- a/appspec.yml
+++ b/appspec.yml
@@ -2,4 +2,4 @@ version: 0.0
 os: windows
 files:
   - source: \
-    destination: C:\Test
+    destination: C:\Program Files (x86)\nginx-1.14.0\html\dockrypto\download
